force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__Asset__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </CustomField>