force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__Attribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>