force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__FavoriteProduct__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FavoriteProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Favorite Product</label>
        <referenceTo>SBQQ__FavoriteProduct__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </CustomField>