force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__OrderItem__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>AttributeValues</relationshipName>
        <type>Lookup</type>
    </CustomField>