force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Value__c</fullName>
        <label>Value (Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>