force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__ValueDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueDate__c</fullName>
        <label>Value (Date)</label>
        <type>Date</type>
    </CustomField>