force-app/main/default/objects/SBQQ__AttributeValue__c/fields/SBQQ__ValueNumber__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ValueNumber__c</fullName>
        <label>Value (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>